# makedepgraph

./: pyproject.toml
makedepgraph/: __main__.py
